Finished setting up .h and .cpp files for constants, variables and I2C funtions.

--- a/platformio.ini
+++ b/platformio.ini
@@ -5,7 +5,9 @@ framework = arduino
 monitor_port = COM5
 monitor_speed = 9600
 upload_port = COM5
-build_src_filter = +<cpu1/>
+build_src_filter = +<cpu1/> +<shared/>
+lib_deps =
+    https://github.com/luni64/TeensyStep4.git
 
 [env:cpu2]
 platform = teensy
@@ -14,4 +16,6 @@ framework = arduino
 monitor_port = COM7
 monitor_speed = 9600
 upload_port = COM7
-build_src_filter = +<cpu2/>
+build_src_filter = +<cpu2/> +<shared/>
+lib_deps =
+    https://github.com/luni64/TeensyStep4.git
