--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,59 @@
-.pio
-.vscode/.browse.c_cpp.db*
-.vscode/c_cpp_properties.json
-.vscode/launch.json
-.vscode/ipch
+# -----------------------------
+# PlatformIO build system
+# -----------------------------
+.pio/
+.pioenvs/
+.piolibdeps/
+.pio/libdeps/
+.pio/build/
+
+# -----------------------------
+# VS Code settings
+# -----------------------------
+.vscode/
+*.code-workspace
+
+# -----------------------------
+# OS-specific junk files
+# -----------------------------
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Linux
+*~
+
+# -----------------------------
+# Logs, caches, temp files
+# -----------------------------
+*.log
+*.tmp
+*.cache
+*.swp
+*.swo
+
+# -----------------------------
+# Python virtual environments (if ever used)
+# -----------------------------
+venv/
+.env/
+__pycache__/
+
+# -----------------------------
+# Backup files
+# -----------------------------
+*.bak
+*.old
+*.orig
+
+# -----------------------------
+# PlatformIO project metadata
+# -----------------------------
+.clang_complete
+.gcc-flags.json
