I2C comms, digital IO and Modbus comms working. Need to do pattern value updating.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,13 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [env:cpu1]
 platform = teensy
 board = teensy41
@@ -6,11 +16,11 @@ monitor_port = COM5
 monitor_speed = 9600
 upload_port = COM5
 build_src_filter = +<cpu1/> +<shared/>
-lib_deps =
-  https://github.com/luni64/TeensyStep4.git
+lib_deps = 
 	https://github.com/robtillaart/FastShiftIn.git
-  https://github.com/arduino-libraries/ArduinoModbus.git
-  https://github.com/arduino-libraries/ArduinoRS485.git
+	https://github.com/luni64/TeensyStep4.git
+	https://github.com/arduino-libraries/ArduinoModbus.git
+	https://github.com/arduino-libraries/ArduinoRS485.git
 
 [env:cpu2]
 platform = teensy
@@ -20,8 +30,7 @@ monitor_port = COM7
 monitor_speed = 9600
 upload_port = COM7
 build_src_filter = +<cpu2/> +<shared/>
-lib_deps =
-  https://github.com/luni64/TeensyStep4.git
-	https://github.com/robtillaart/FastShiftIn.git
-  https://github.com/arduino-libraries/ArduinoModbus.git
-  https://github.com/arduino-libraries/ArduinoRS485.git
+lib_deps = 
+	https://github.com/luni64/TeensyStep4.git
+	https://github.com/arduino-libraries/ArduinoModbus.git
+	https://github.com/arduino-libraries/ArduinoRS485.git
